deploy: 080f432e15de7610b0ade6b91b1369b34e3de19c

--- a/franske-courses/current/itc-2300/assignments.html
+++ b/franske-courses/current/itc-2300/assignments.html
@@ -498,9 +498,17 @@ Discussion forum posts are usually worth a larger portion of your final grade th
 <h2 id="_participation_activities"><a class="anchor" href="#_participation_activities"></a>Participation Activities</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Any participation activities completed in the course will go here. This falls into the participation category of your course grade.
-* For each topic you need to meet with the instructor at least once to check on your status and understanding of the topic. Each meeting will be worth up to 10 points.
-* You will need to complete peer evaluations of all course projects, these evaluations will be worth 10 participation points total.</p>
+<p>Any participation activities completed in the course will go here. This falls into the participation category of your course grade.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>For each topic you need to meet with the instructor at least once to check on your status and understanding of the topic. Each meeting will be worth up to 10 points.</p>
+</li>
+<li>
+<p>You will need to complete peer evaluations of all course projects, these evaluations will be worth 10 participation points total.</p>
+</li>
+</ul>
 </div>
 </div>
 </div>
@@ -639,7 +647,7 @@ Discussion forum posts are usually worth a larger portion of your final grade th
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-22 18:04:22 -0500<br>
+<p>Document Build Time: 2022-08-24 15:58:08 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
