--- a/franske-courses/current/itc-2611/assignments.html
+++ b/franske-courses/current/itc-2611/assignments.html
@@ -246,7 +246,7 @@
 <div class="sect2">
 <h3 id="_lab_reports"><a class="anchor" href="#_lab_reports"></a>Lab Reports</h3>
 <div class="paragraph">
-<p>For each module having lab activities you will need to submit one <a href="../lab-reports/" class="xref page">lab report</a> which covers all of the lab activities listed below in the module. Submissions are made through the NetAcad site. You do not need to submit answers to the questions in the activities, those are for your own learning use only. Lab activities may include remote equipment access, campus equipment, or packet tracer activities. Each lab report is worth up to 20 points.</p>
+<p>For each chapter having lab activities you will need to submit one <a href="../lab-reports/" class="xref page">lab report</a> which covers all of the lab activities listed below in the chapter. Submissions are made through the NetAcad site. You do not need to submit answers to the questions in the activities, those are for your own learning use only. Lab activities may include remote equipment access, campus equipment, or packet tracer activities. Each lab report is worth up to 20 points.</p>
 </div>
 <div class="admonitionblock tip">
 <table>
@@ -472,7 +472,7 @@ You will be using the CCNP VM in Virtual Box on your Pod PC. Be sure the MAC add
 <div class="ulist">
 <ul>
 <li>
-<p>Participate in an online forum discussion (typically 3 quality posts or more) of each module on the Cisco Netacad site. See the <a href="../forum-posting/" class="xref page">forum posting page</a> for details. (up to 10 points each module based on quality)</p>
+<p>Participate in an online forum discussion (typically 3 quality posts or more) of each chapter on the Cisco Netacad site. See the <a href="../forum-posting/" class="xref page">forum posting page</a> for details. (up to 10 points each chapter based on quality)</p>
 </li>
 </ul>
 </div>
@@ -512,7 +512,7 @@ Discussion forum posts are usually worth a larger portion of your final grade th
 <div class="sect2">
 <h3 id="_unit_assessments"><a class="anchor" href="#_unit_assessments"></a>Unit Assessments</h3>
 <div class="paragraph">
-<p>You are responsible for completing all of the online unit assessments listed below. Multiple modules are included in single exams. These exams fall into the online assessments category of your course grade.</p>
+<p>You are responsible for completing all of the online unit assessments listed below. Multiple chapters are included in single exams. These exams fall into the online assessments category of your course grade.</p>
 </div>
 <div class="ulist">
 <ul>
@@ -565,7 +565,7 @@ Discussion forum posts are usually worth a larger portion of your final grade th
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-25 14:59:48 -0500<br>
+<p>Document Build Time: 2022-08-25 15:06:29 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
