--- a/franske-courses/current/itc-2300/schedule.html
+++ b/franske-courses/current/itc-2300/schedule.html
@@ -395,9 +395,16 @@
 <td class="tableblock halign-left valign-top"><p class="tableblock">14-Dec</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">FE Week</p></td>
 <td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Case Study Presentations, Case Study Lab Reports, Online Final Exam</p></td>
-<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Instructor meeting not required this week</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">===</p>
+<p class="tableblock">Test</p>
+<p class="tableblock">'''
+[%hardbreaks]
+Document Build Time: 2022-08-25 15:11:17 -0500
+Page Version: 2022.08
+<span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span>
+This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p></td>
 </tr>
 </tbody>
 </table>
