--- a/franske-courses/current/itc-2516/schedule.html
+++ b/franske-courses/current/itc-2516/schedule.html
@@ -277,7 +277,7 @@
 <td class="tableblock halign-left valign-top"><p class="tableblock">Modules 3 &amp; 4</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Module 2 Lab Activities, Instructor Meeting</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Module 3 &amp; 4 Packet Tracer Activities, Module 1 &amp; 2 Online Discussion Response Posts, Module 3 &amp; 4 Online Discussion First Posts</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Module 1 &amp; 2 Online Discussion First Posts</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Module 1 &amp; 2 Online Discussion First Posts, System Test Exam</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">5-Sep</p></td>
@@ -403,7 +403,7 @@
 </table>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-25 15:19:12 -0500<br>
+<p>Document Build Time: 2022-08-25 15:22:28 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
