deploy: fe5549d4a737bca6c29e1227d223c358de3eed80

--- a/franske-courses/current/itc-2300/lab-vmware-vcenterinstallation.html
+++ b/franske-courses/current/itc-2300/lab-vmware-vcenterinstallation.html
@@ -340,8 +340,14 @@ If you make a mistake and need to have one or both of your HV VMs erased so you 
 <p>Obtain static IP addressing information from the table above and change the IP address of each ESXi server in your pod to a unique static IP address.</p>
 </li>
 <li>
-<p>Use the PC-C VM to mount the VCSA installation ISO file by double clicking on it.
-.* The VCSA ISO file is named "VMware-VCSA-all-6.7.0-15976714.iso" and can be found on the Windows SMB fileshare "\\172.17.139.70\Student Files\ITC2300" which you can access from PC-C. Use your VPN login credentials but with @campus.ihitc.net on the end like <a href="mailto:username@campus.ihitc.net">username@campus.ihitc.net</a> to access the files.</p>
+<p>Use the PC-C VM to mount the VCSA installation ISO file by double clicking on it.</p>
+<div class="ulist">
+<ul>
+<li>
+<p>The VCSA ISO file is named "VMware-VCSA-all-6.7.0-15976714.iso" and can be found on the internal website <a href="http://172.17.139.70:8080" class="bare">http://172.17.139.70:8080</a> which you can access from PC-C.</p>
+</li>
+</ul>
+</div>
 </li>
 <li>
 <p>Open the installer.exe file found in the vcsa-ui-installer\win32 directory of the VCSA ISO image and click install to begin the installation process. If you&#8217;re unfamiliar with the installation process you can refer back to your readings as well as <a href="https://featurewalkthrough.vmware.com/t/vsphere-6-5/vcenter-server-appliance-embedded-deployment/">a VMware walk-through</a>.</p>
@@ -462,7 +468,7 @@ You will need to upload the ISOs to the datastore on the ESXi system which you a
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-25 15:30:09 -0500<br>
+<p>Document Build Time: 2022-08-27 11:35:27 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
