--- a/franske-courses/current/itc-2300/lab-vmware-esxiinstallation.html
+++ b/franske-courses/current/itc-2300/lab-vmware-esxiinstallation.html
@@ -412,7 +412,7 @@ If you make a mistake and need to have one or both of your HV VMs erased so you 
 <div class="ulist">
 <ul>
 <li>
-<p>The ISO files can be found on the Windows SMB fileshare "\\172.17.139.70\Student Files\ITC2300" which you can access from PC-C. Use your VPN login credentials but with @campus.ihitc.net on the end like <a href="mailto:username@campus.ihitc.net">username@campus.ihitc.net</a> to access the files.</p>
+<p>The ISO files can be found on internal website <a href="http://172.17.139.70:8080" class="bare">http://172.17.139.70:8080</a> which you can access from PC-C.</p>
 </li>
 </ul>
 </div>
@@ -433,7 +433,7 @@ If you make a mistake and need to have one or both of your HV VMs erased so you 
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-25 15:30:09 -0500<br>
+<p>Document Build Time: 2022-08-27 11:35:27 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
