--- a/franske-courses/current/itc-2300/lab-vmware-vsphereadmin.html
+++ b/franske-courses/current/itc-2300/lab-vmware-vsphereadmin.html
@@ -375,7 +375,7 @@ You will need to upload the ISOs to the datastore on the ESXi system which you a
 <div class="ulist">
 <ul>
 <li>
-<p>The Windows Server 2019 installation ISO files can be found on the Windows SMB fileshare "\\172.17.139.70\Student Files\ITC2300" which you can access from PC-C. Use your VPN login credentials but with @campus.ihitc.net on the end like <a href="mailto:username@campus.ihitc.net">username@campus.ihitc.net</a> to access the files.</p>
+<p>The Windows Server 2019 installation ISO files can be found on the internal website <a href="http://172.17.139.70:8080" class="bare">http://172.17.139.70:8080</a> which you can access from PC-C.</p>
 </li>
 </ul>
 </div>
@@ -494,7 +494,7 @@ If you instead want to try joining your VCSA system to the domain and using Inte
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-25 15:30:09 -0500<br>
+<p>Document Build Time: 2022-08-27 11:35:27 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
