--- a/franske-courses/current/itc-2611/assignments.html
+++ b/franske-courses/current/itc-2611/assignments.html
@@ -246,7 +246,7 @@
 <div class="sect2">
 <h3 id="_lab_reports"><a class="anchor" href="#_lab_reports"></a>Lab Reports</h3>
 <div class="paragraph">
-<p>For each chapter having lab activities you will need to submit one <a href="../lab-reports/" class="xref page">lab report</a> which covers all of the lab activities listed below in the chapter. Submissions are made through the NetAcad site. You do not need to submit answers to the questions in the activities, those are for your own learning use only. Lab activities may include remote equipment access, campus equipment, or packet tracer activities. Each lab report is worth up to 20 points.</p>
+<p>For each chapter having lab activities you will need to submit one <a href="../lab-reports/" class="xref page">lab report</a> which covers all of the lab activities listed below in the chapter. Submissions are made through the NetAcad site. You do not need to submit answers to the questions in the activities, those are for your own learning use only. Lab activities may include remote equipment access or campus equipment. <strong>Good lab reports in this class are typically 400-700 words long.</strong> Each lab report is worth up to 20 points.</p>
 </div>
 <div class="admonitionblock tip">
 <table>
@@ -565,7 +565,7 @@ Discussion forum posts are usually worth a larger portion of your final grade th
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-27 11:35:27 -0500<br>
+<p>Document Build Time: 2022-08-29 16:39:47 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
