deploy: cc48d2c0824387b5c73dc5f201dc1e930cb513c5

--- a/franske-courses/current/itc-2300/lab-proxmox-installation.html
+++ b/franske-courses/current/itc-2300/lab-proxmox-installation.html
@@ -388,7 +388,7 @@ If you make a mistake and need to have one or both of your HV VMs erased so you 
 <div class="ulist">
 <ul>
 <li>
-<p>It is recommended you set the name to "podXproxmoxA.itc2300.ihitc.net" (change as needed for your pod letter and HV VM ID letter)</p>
+<p>It is recommended you set the name to "podXproxmoxA.itc2300.campus.ihitc.net" (change as needed for your pod letter and HV VM ID letter)</p>
 </li>
 </ul>
 </div>
@@ -397,7 +397,7 @@ If you make a mistake and need to have one or both of your HV VMs erased so you 
 </div>
 </li>
 <li>
-<p>Once installation is finished use a web browser on PC-C to access the Proxmox VE server&#8217;s web interface as the root user (username root) and password set during the installation</p>
+<p>Once installation is finished use a web browser on PC-C to access the Proxmox VE server&#8217;s web interface at the IP address of the hypervisor and login as the root user (username root) and password set during the installation</p>
 <div class="openblock">
 <div class="content">
 <div class="admonitionblock note">
@@ -494,7 +494,7 @@ Choose that you don&#8217;t have a product key when installing Windows, we&#8217
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-29 16:39:47 -0500<br>
+<p>Document Build Time: 2022-08-31 18:02:03 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
