--- a/franske-courses/current/itc-2300/schedule.html
+++ b/franske-courses/current/itc-2300/schedule.html
@@ -267,7 +267,7 @@
 <td class="tableblock halign-left valign-top"><p class="tableblock">24-Aug</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">1</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Introduction to Virtualization (complete whitepaper), Proxmox VE Fundamentals, Installing Proxmox VE</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Review Syllabus/Schedule, Check Netlab Access</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Review Syllabus/Schedule, Check Netlab Access and ensure you are enrolled in the class on Netlab</p></td>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"></td>
 </tr>
@@ -403,7 +403,7 @@
 </table>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-31 18:02:03 -0500<br>
+<p>Document Build Time: 2022-08-31 20:42:05 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
