--- a/franske-courses/current/itc-2300/lab-vmware-esxiinstallation.html
+++ b/franske-courses/current/itc-2300/lab-vmware-esxiinstallation.html
@@ -393,7 +393,23 @@ If you make a mistake and need to have one or both of your HV VMs erased so you 
 </div>
 </li>
 <li>
-<p>Browse to the ESXi system in a web browser from PC-C. Note that it will NOT yet be at the IP address in the table above, we will set a static IP in the next lab. For now your ESXi system should have a DHCP IP address which is displayed on it&#8217;s console screen.</p>
+<p>Browse to the ESXi system in a web browser from PC-C.</p>
+<div class="openblock">
+<div class="content">
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+It will NOT yet be at the IP address in the table above, we will set a static IP in the next lab. For now your ESXi system should have a DHCP IP address which is displayed on it&#8217;s console screen.
+</td>
+</tr>
+</table>
+</div>
+</div>
+</div>
 </li>
 <li>
 <p>Login as the root user.</p>
@@ -433,7 +449,7 @@ If you make a mistake and need to have one or both of your HV VMs erased so you 
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-31 20:42:05 -0500<br>
+<p>Document Build Time: 2022-09-07 12:11:55 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
