deploy: 0f5d308d84b2c7efb6697e7b5cef72e3034340f4

--- a/franske-courses/current/itc-2300/schedule.html
+++ b/franske-courses/current/itc-2300/schedule.html
@@ -282,7 +282,7 @@
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">7-Sep</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">3</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">vmWare vSphere Basics (complete whitepaper), vSphere 6.5 Installation and Setup Guide (Pages 82-85, 193-217)</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">vmWare vSphere Basics (complete whitepaper), vSphere 6.7 Installation and Setup Guide (Pages 73-76, 194-218), vSphere 6.7 Virtual Machine Administration (Pages 13-27, 100-191)</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Proxmox VE Containes &amp; Clusters Lab</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Proxmox Installation Lab Report, Proxmox Installation Discussion All Posts, Proxmox VE Containers &amp; Clusters Discussion First Posts</p></td>
 <td class="tableblock halign-left valign-top"></td>
@@ -290,7 +290,7 @@
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">14-Sep</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">4</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">vSphere 6.5 Virtual Machine Administration (p. 8-23), VCSA 6.5 Installation Walkthrough, vSphere 6.5 Installation and Setup Guide (p. 10-18, 232-240), vCenter 6.5 Server and Host Management (p. 23-61)</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">vCenter 6.7 Server Installation and Setup (p. 10-22, 40-65), vCenter 6.7 Server and Host Management (p. 25-76)</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">VMware ESXi Installation Lab</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Proxmox VE Containers &amp; Clusters Lab Report, Proxmox VE Containers &amp; Clusters Discussion All Posts, VMware ESXi Installation Discussion First Posts, Proxmox Exam</p></td>
 <td class="tableblock halign-left valign-top"></td>
@@ -298,7 +298,7 @@
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">21-Sep</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">5</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">vSphere 6.5 Command Line Concepts and Examples (p. 11-31), vmWare KB1038043, vCenter 6.5 Server and Host Management (p. 113-124), vSphere 6.5 Virtual Machine Administration (p. 24-50) (Notes: Add AD Integration)</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">vSphere 6.7 Command Line Concepts and Examples (p. 10-30), vmWare KB1038043, vCenter 6.7 Server and Host Management (p. 144-160), vSphere 6.7 Virtual Machine Administration (Pages 27-61), vSphere 6.7 Platform Services Controller Administration (p. 26-42)</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">VMware vCenter Installation Lab</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">VMware ESXi Install Lab Report, VMware ESXi Installation Discussion All Posts, VMware vCenter Installation First Posts, VMware ESXi Exam</p></td>
 <td class="tableblock halign-left valign-top"></td>
@@ -403,7 +403,7 @@
 </table>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-09-07 12:11:56 -0500<br>
+<p>Document Build Time: 2022-09-07 15:55:43 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
