--- a/franske-courses/current/itc-2300/lab-proxmox-installation.html
+++ b/franske-courses/current/itc-2300/lab-proxmox-installation.html
@@ -431,6 +431,18 @@ You may want to read up about <a href="https://pve.proxmox.com/wiki/User_Managem
 </tr>
 </table>
 </div>
+<div class="admonitionblock tip">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-tip" title="Tip"></i>
+</td>
+<td class="content">
+Other students have used the power of Internet searching to find <a href="https://techviewleo.com/create-users-groups-permissions-proxmox/">this site about users, groups and permissions in Proxmox VE</a> which they have found helpful.
+</td>
+</tr>
+</table>
+</div>
 </div>
 </div>
 </li>
@@ -512,7 +524,7 @@ If you do not see a hard drive to install Windows too it&#8217;s possibly your h
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-09-07 15:55:43 -0500<br>
+<p>Document Build Time: 2022-09-07 20:34:13 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
