--- a/franske-courses/current/itc-2300/schedule.html
+++ b/franske-courses/current/itc-2300/schedule.html
@@ -308,7 +308,7 @@
 <td class="tableblock halign-left valign-top"><p class="tableblock">6</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Read/Watch: Introduction to VoIP with Asterisk Materials (see below)</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">VMware vSphere Administration Lab</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">VMware vCenter Install Lab Report, VMware vCenter Installation Discussion All Posts, VMware vSphere Administration Discussion First Posts, VMware vCenter Exam</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">VMware vCenter Install Lab Report, VMware vCenter Installation Discussion All Posts, VMware vSphere Administration Discussion First Posts</p></td>
 <td class="tableblock halign-left valign-top"></td>
 </tr>
 <tr>
@@ -316,7 +316,7 @@
 <td class="tableblock halign-left valign-top"><p class="tableblock">7</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Read: VoIP: Provisioning, Voicemail, and SIP (see below)</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Introduction to VoIP Labs (see Assignments page)</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">VMware vSphere Administration Lab Report, VMware vSphere Administration Discussion All Posts, Introduction to VoIP First Posts, VMware vSphere Administration Exam</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">VMware vSphere Administration Lab Report, VMware vSphere Administration Discussion All Posts, Introduction to VoIP First Posts, VMware vCenter and Administration Exam</p></td>
 <td class="tableblock halign-left valign-top"></td>
 </tr>
 <tr>
@@ -403,7 +403,7 @@
 </table>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-09-07 20:34:14 -0500<br>
+<p>Document Build Time: 2022-09-09 12:58:50 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
