--- a/404.html
+++ b/404.html
@@ -132,7 +132,7 @@ If you typed the URL of this page manually, please double check that you entered
   <p>This page was built using the Antora default UI.</p>
   <p>The source code for this UI is licensed under the terms of the MPL-2.0 license.</p>
 </footer>
-<script src="/ihitc-docs/_/js/site.js"></script>
+<script id="site-script" src="/ihitc-docs/_/js/site.js" data-ui-root-path="/ihitc-docs/_"></script>
 <script async src="/ihitc-docs/_/js/vendor/highlight.js"></script>
 <script src="/ihitc-docs/_/js/vendor/lunr.js"></script>
 <script src="/ihitc-docs/_/js/search-ui.js" id="search-ui-script" data-site-root-path="/ihitc-docs" data-snippet-length="100" data-stylesheet="/ihitc-docs/_/css/search.css"></script>
