--- a/program-info/2022.01/certification-credit.html
+++ b/program-info/2022.01/certification-credit.html
@@ -333,7 +333,7 @@
 </table>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-09-09 12:58:50 -0500<br>
+<p>Document Build Time: 2022-09-28 20:28:02 -0500<br>
 Page Version: 2022.01<br>
 <span class="image"><img src="../current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
@@ -346,7 +346,7 @@ This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa
   <p>This page was built using the Antora default UI.</p>
   <p>The source code for this UI is licensed under the terms of the MPL-2.0 license.</p>
 </footer>
-<script src="../../_/js/site.js"></script>
+<script id="site-script" src="../../_/js/site.js" data-ui-root-path="../../_"></script>
 <script async src="../../_/js/vendor/highlight.js"></script>
 <script src="../../_/js/vendor/lunr.js"></script>
 <script src="../../_/js/search-ui.js" id="search-ui-script" data-site-root-path="../.." data-snippet-length="100" data-stylesheet="../../_/css/search.css"></script>
